# neo-personal-website

./: .gitignore  .gitmodules  Readme.md
website/: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.md  pyproject.toml  test.md
website/app/: context_processors.py  services.py  urls.py  utils.py  views.py
website/app/services/: __init__.py  kiln.py  portfolio.py
website/app/templates/: about.html  base.html  index.html  kiln.html  navbar.html  portfolio.html  portfolio_cv.html  portfolio_cv_print.html  portfolio_piece_print.html  portfolio_pieces.html  portfolio_print.html  post.html  posts.html  projects.html  tags.html
website/app/templatetags/: extras.py
website/content/: about.md  ai-talk.md  art.md  creative-coding.md  games.md  photography.md
website/content/portfolio/: bio.md  general.md
website/content/posts/: 15puzzle_solver_vibecoded.md  aratu.md  aratu_1.md  aratu__ik_fk.md  awesome_learning.md  awesome_tools.md  burning_things_pottery.md  cracks.md  dancing-room-zero.md  dancing-room.md  debugging-kernel-panic-boot.md  debugging_dead_wifi.md  fixing_kiln.md  flow.md  fracture.md  gabate-world-record.md  hello-world.md  keyboard_ressurected.md  mandelbrot-explorer.md  modern_filesystems.md  moving_home_to_btrfs.md  resizing_partitions.md  rubiks-cube-solver.md  sc2-stalker-micro.md  smart-panda.md  smart_kiln.md  smart_kiln_debug_slow_serial.md
website/content/projects/: colosseum.md  gabate.md  gameboy-docs.md  garapa.md  sc2ai.md  strange-explorer.md  tetris-re.md
website/content/videos/: arc1.webm  arc2.webm  wait_for_allies.webm
website/static/css/: index.css  (+1 more)
website/website/: asgi.py  settings.py  urls.py  wsgi.py
(+31 files in other folders)
