[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["h3nnn4n <git@renan.digital>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[flake8]
max-line-length = 144
