[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["h3nnn4n <git@renan.digital>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
Markdown = "^3.4.1"
redis = "^4.4.0"
django-memoize = "^2.3.1"
fontawesomefree = "^6.2.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.bandit]
exclude_dirs = []

[tool.mypy]
ignore_missing_imports = true
